# wasmcon2023

./: .gitignore  README.md
components/: greet-wat-rs.wasm  greet.c.wasm  greet.rs.wasm  greet.wat.wasm  wat-c.wasm
components/c/: README.md  component.c  greet-module.c.wasm  greeter_adapter.c  greeter_adapter.h  proxy_greeter.c  proxy_greeter.h
components/go/: main.go
components/javascript/: README.md  greet.js  package-lock.json  package.json
components/python/: README.md  greet.py
components/rust/: Cargo.toml  README.md
components/rust/src/: lib.rs
components/wat/: README.md  greet.wat  greet.wat.wasm
composer/: Cargo.toml
runner/: Cargo.toml
runner/src/: main.rs
wit/: greeter.wit
